fixed OutOfMemoryError error